--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
     </div>
   </template>
 
-  <script src="js/main.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/data.js"></script>
 </body>
 </html>
