--- a/index.html
+++ b/index.html
@@ -250,5 +250,10 @@
 
   <script src="js/utils.js"></script>
   <script src="js/data.js"></script>
+  <script src="js/pin.js"></script>
+  <script src="js/form.js"></script>
+  <script src="js/popup.js"></script>
+  <script src="js/map.js"></script>
+  <!-- <script src="js/main.js"></script> -->
 </body>
 </html>
