--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   </template>
 
   <script src="js/utils.js"></script>
-  <script src="js/data.js"></script>
+  <script src="js//backend.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/form.js"></script>
   <script src="js/popup.js"></script>
