--- a/index.html
+++ b/index.html
@@ -251,9 +251,10 @@
   <script src="js/config.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
-  <script src="js/pin.js"></script>
+  <script src="js/pins.js"></script>
   <script src="js/form.js"></script>
   <script src="js/popup.js"></script>
+  <script src="js/main-pin.js"></script>
   <script src="js/map.js"></script>
 </body>
 </html>
