filter housing-type

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   <script src="js/config.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/filter.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/form.js"></script>
   <script src="js/popup.js"></script>
