--- a/index.html
+++ b/index.html
@@ -173,10 +173,9 @@
           <label class="ad-form__label">Фотографии жилья</label>
           <div class="ad-form__photo-container">
             <div class="ad-form__upload">
-              <input type="file" id="images" name="images" class="ad-form__input visually-hidden">
+              <input type="file" id="images" name="images" class="ad-form__input visually-hidden" multiple="multiple">
               <label for="images" class="ad-form__drop-zone">Загрузите или&nbsp;перетащите сюда фото</label>
             </div>
-            <div class="ad-form__photo"></div>
           </div>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--submit" disabled>
@@ -245,6 +244,13 @@
     <div class="error">
       <p class="error__message">Ошибка загрузки объявления</p>
       <button class="error__button" href="#">Попробовать снова</button>
+    </div>
+  </template>
+
+  <!-- Фотография обьявления -->
+  <template id="photo">
+    <div class="ad-form__photo">
+      <img src="img/muffin-grey.svg" alt="Фотография обьявления" width="40" height="44">
     </div>
   </template>
 
