--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </fieldset>
         <fieldset class="ad-form__element" disabled>
           <label class="ad-form__label" for="price">Цена за ночь, руб.</label>
-          <input id="price" name="price" type="number" placeholder="5000" required max="1000000" min="1000" value="">
+          <input id="price" name="price" type="number" placeholder="5000" required max="1000000" min="1000" value="" readonly>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--time" disabled>
           <label class="ad-form__label" for="timein">Время заезда и выезда</label>
@@ -257,6 +257,7 @@
   <script src="js/config.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/backend.js"></script>
+  <script src="js/ai.js"></script>
   <script src="js/filter.js"></script>
   <script src="js/pins.js"></script>
   <script src="js/form.js"></script>
